--- a/css/styles.css
+++ b/css/styles.css
@@ -2,31 +2,64 @@
   box-sizing: border-box; }
 
 ul {
-  padding: 0; }
+  padding: 0;
+  text-align: center; }
 
 li {
   list-style: none; }
 
-.is-selected {
-  background-color: #abcdef; }
+button {
+  width: 100%;
+  padding: 10px;
+  margin: 5px; }
+  @media screen and (min-width: 720px) {
+    button {
+      width: 85%; } }
+
+h1 {
+  margin-top: 0; }
+
+.header {
+  background-image: url("../img/bar.jpeg");
+  background-size: cover;
+  color: #fff;
+  height: 400px; }
+  .header .header-text {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    padding: 20px 10%;
+    background-color: rgba(99, 36, 36, 0.4); }
 
 .bar-list {
   width: 90%;
-  height: 350px;
+  height: 530px;
   margin: 0 auto;
-  background-color: whitesmoke; }
-  @media screen and (min-width: 620px) {
+  background-color: whitesmoke;
+  padding: 5px; }
+  .bar-list .bar-item {
+    padding: 5px;
+    margin: 5px;
+    background-color: #fff;
+    border-radius: 5px;
+    border: 2px solid #fff; }
+  .bar-list .is-selected {
+    border: 2px solid #ae3f3f; }
+  .bar-list li:hover {
+    cursor: pointer;
+    color: #200c0c; }
+  @media screen and (min-width: 720px) {
     .bar-list {
-      width: 50%;
+      width: 25%;
       float: left; } }
 
 #map {
-  height: 350px;
+  height: 530px;
   width: 90%;
   margin: 0 auto; }
-  @media screen and (min-width: 620px) {
+  @media screen and (min-width: 720px) {
     #map {
-      width: 50%;
+      width: 75%;
       float: right; } }
 
 /*# sourceMappingURL=styles.css.map */
