--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,21 +5,47 @@
 }
 
 // Variables
-$medium-breakpoint: 620px;
-$height: 350px;
+$medium-breakpoint: 720px;
+$height: 530px;
+$accent-color: #632424;
+$background-color: rgba($accent-color, 0.4);
 
 // Base
 
 ul {
   padding: 0;
+  text-align: center;
 }
 
 li {
   list-style: none;
 }
 
-.is-selected {
-  background-color: #abcdef;
+button {
+  width: 100%;
+  padding: 10px;
+  margin: 5px;
+  @media screen and (min-width: $medium-breakpoint) {
+    width: 85%;
+  }
+}
+
+h1 {
+  margin-top: 0;
+}
+
+.header {
+  background-image: url("../img/bar.jpeg");
+  background-size: cover;
+  color: #fff;
+  height: 400px;
+  .header-text {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    padding: 20px 10%;
+    background-color: $background-color;
+  }
 }
 
 .bar-list {
@@ -27,8 +53,23 @@ li {
   height: $height;
   margin: 0 auto;
   background-color: whitesmoke;
+  padding: 5px;
+  .bar-item {
+    padding: 5px;
+    margin: 5px;
+    background-color: #fff;
+    border-radius: 5px;
+    border: 2px solid #fff;
+  }
+  .is-selected {
+    border: 2px solid lighten($accent-color, 20%);
+  }
+  li:hover {
+    cursor: pointer;
+    color: darken($accent-color, 18%);
+  }
   @media screen and (min-width: $medium-breakpoint) {
-    width: 50%;
+    width: 25%;
     float: left;
   }
 }
@@ -38,7 +79,7 @@ li {
   width: 90%;
   margin: 0 auto;
   @media screen and (min-width: $medium-breakpoint) {
-    width: 50%;
+    width: 75%;
     float: right;
   }
 }
