--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,8 @@
 
 ul {
   padding: 0;
-  text-align: center; }
+  text-align: center;
+  position: static; }
 
 li {
   list-style: none; }
@@ -28,8 +29,21 @@ h1 {
     width: 100%;
     height: 100%;
     margin: 0 auto;
-    padding: 20px 10%;
+    padding: 30px 10%;
     background-color: rgba(99, 36, 36, 0.4); }
+
+.main {
+  position: relative; }
+
+.selections {
+  height: 100px; }
+  .selections .selected {
+    padding: 10px;
+    margin: 10px;
+    background-color: #632424;
+    color: #fff;
+    border-radius: 5px;
+    float: left; }
 
 .bar-list {
   width: 90%;
